# paypal_mcp_server

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/: main.py
src/api/: client.py  functions.py
src/mcp/: server.py  transport.py
src/tools/: definitions.py  parameters.py  prompts.py  utils.py
